--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,14 @@
-{% set version = "0.1.0" %}
+{% set version = "0.1.1" %}
 
 package:
     name: conda-exec
     version: {{ version }}
 
-source:
-    git_url: https://github.com/nomr/conda-exec.git
-    git_rev: {{ version }}
-
 build:
     number: 0
     skip: True  # [win]
+    script:
+        - install ${RECIPE_DIR}/conda-exec.sh ${PREFIX}/bin/conda-exec
 
 requirements:
     run:
@@ -18,7 +16,7 @@ requirements:
 
 test:
     commands:
-        - conda-exec -h
+        - conda exec -h
 
 about:
     home: https://github.com/nomr/conda-exec
