--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ about:
     home: https://github.com/nomr/conda-exec
     license: BSD 3-Clause
     license_family: BSD
-    license_file: LICENSE
+    license_file: ${RECIPE_DIR}/LICENSE
     summary: Executes a command inside a conda environment
 
     dev_url: https://github.com/nomr/conda-exec
