Add basic tests on osx

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ test:
         - num-args 2 one two
         - conda-exec -- $PREFIX num-args 2 one two
         - num-args 1 "one two"
-        - conda-exec -- $PREFIX num-args 1 "one two"
+        - conda-exec -- $PREFIX num-args 1 \'one two\'
 
 
 about:
